--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Final_project
 Assg_3/180070022_18D070051_18D070067.rar
 Assg_3/indent.log
 Assg_4/assignment4_SVD_FaceRecognition.zip
+Assg_5/.gitignore
