chore: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Assg_4/assignment4_SVD_FaceRecognition.zip
 Assg_5/.gitignore
 Assg_5/assignment5_DFT.zip
 Assg_5/indent.log
+Assg_5/180070022_18D070051_18D070067
