chore: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Assg_5/.gitignore
 Assg_5/assignment5_DFT.zip
 Assg_5/indent.log
 Assg_5/180070022_18D070051_18D070067
+Assg_5/Assignment 5_ CS 663, Fall 2021.zip
